# nicegui-number_place

./: .gitignore  README.md  pyproject.toml
src/nicegui_number_place/: __init__.py  __main__.py  number_place.py
src/tests/: test_number_place.py
src/tools/: __init__.py  check_problem.py  make_problem.py  pyproject.toml
